--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introducción a JavaScript</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Enlace al archivo CSS -->
+    <title>JavaScript</title>
+    <link rel="stylesheet" href="styles.css"> 
+    
+    <link rel="icon" href="js.jpg" type="image/jpeg"> 
 </head>
 <body>
     <div class="video-background">
