--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             <source src="JavaScript.mp4" type="video/mp4">
             
         </video>
+        <h1>Cancion</h1>
+            <audio controls>
+            <source src="CanciónOficial.mp3" type="audio/mp3">
+        </audio>
     </section>
     
     <section id="table-section">
@@ -94,7 +98,9 @@
             <p>Para aprender más sobre JavaScript, puedes visitar los siguientes recursos:</p>
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=RqQ1d1qEWlE" target="_blank">Tutorial de JavaScript para Principiantes</a></li>
-                <li><a href="https://www.javascript.com/" target="_blank">Blog de JavaScript</a></li>
+                <li><a href="https://www.javascript.com/"  target="_blank">Blog de JavaScript</a></li>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference."  target="_blank">JavaScript</a></li>
+
                 <li><a href="https://eloquentjs-es.thedojo.mx/Eloquent_JavaScript.pdf" target="_blank">Libro: JavaScript Avanzado</a></li>
             </ul>
         </section>
