--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h2>Conceptos Clave de JavaScript</h2>
 <table>
     <thead>
-        <tr>
+        <tr class="tablacenter">
             <th>Concepto</th>
             <th>Descripción</th>
             <th>Ejemplo</th>
