--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
         </ul>
         <video controls>
             <source src="JavaScript.mp4" type="video/mp4">
-            
+                
         </video>
+        <ul>
+            <li><a href="https://www.youtube.com/watch?v=tPGCBvj0HrE" target="_blank">Watch on youtube</a></li>
+        </ul>
         <h1>Cancion</h1>
             <audio controls>
             <source src="CanciónOficial.mp3" type="audio/mp3">
